--- a/.github/workflows/update-tokens.yml
+++ b/.github/workflows/update-tokens.yml
@@ -39,6 +39,8 @@ jobs:
           commit-message: 'style: Update design tokens'
           title: ${{ github.event.client_payload.commitMessage || 'Update design tokens' }}
           body: 'Design tokens have been updated via Figma and need to be reviewed.'
+          branch: update-tokens-${{ github.run_number }}
+          delete-branch: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: 'main'
